Fix card list layout issue

--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -4,7 +4,7 @@
   padding: 16px;
   justify-content: center;
   width: 100%;
-  background: linear-gradient(to top, #7dbcff, white);
+  background: linear-gradient(to right, to left, #072d55, white);
 }
 
 .cardListContainer {
